# smzdm_bot

./: .env.example  .gitignore  README.md  inventory.md.template  llm_models.example.json  preference.md.template  pyproject.toml  search_keywords.example.json
src/smzdm_notice/: __init__.py  __main__.py  cli.py  runtime.py
src/smzdm_notice/core/: config.py  dedup.py  near_miss.py  sleep.py
src/smzdm_notice/feishu/: binding.py  bot.py  commands.py  media.py  notifier.py  sdk.py
src/smzdm_notice/llm/: arbitration.py  clients.py  errors.py  filter.py  json_utils.py  models.py  prompts.py  routing.py
src/smzdm_notice/preferences/: builder.py  models.py  preview.py  prompts.py  store.py
src/smzdm_notice/smzdm/: client.py  keywords.py  ranking.py  search.py  sources.py
tests/: test_cli.py  test_dedup.py  test_draft_preview.py  test_feishu_bot.py  test_feishu_media.py  test_json_utils.py  test_llm_filter.py  test_llm_routing.py  test_main_config.py  test_near_miss.py  test_notifier.py  test_preferences_builder_store.py  test_search_keywords.py  test_smzdm_search.py
